--- a/config/database.yml
+++ b/config/database.yml
@@ -50,6 +50,8 @@ test:
 #
 production:
   <<: *default
+  adapter: mysql2
   database: japan_complete_production
   username: japan_complete
   password: <%= ENV["JAPAN_COMPLETE_DATABASE_PASSWORD"] %>
+  socket: /var/lib/mysql/mysql.sock
