--- a/config/database.yml
+++ b/config/database.yml
@@ -52,6 +52,6 @@ production:
   <<: *default
   adapter: mysql2
   database: japan_complete_production
-  username: japan_complete
-  password: <%= ENV["JAPAN_COMPLETE_DATABASE_PASSWORD"] %>
+  username: root
+  password: <%= ENV["DATABASE_PASSWORD"] %>
   socket: /var/lib/mysql/mysql.sock
